--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,3 +92,87 @@ footer {
     display: block;
   }
 }
+/* assets/css/main.css */
+
+body {
+    margin: 0;
+    font-family: 'Cairo', sans-serif;
+    background-color: #111;
+    color: #fff;
+}
+
+.header {
+    background: #b40000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+}
+
+.logo img {
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+}
+
+.nav ul {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.nav ul li {
+    margin: 0 10px;
+}
+
+.nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+}
+
+.nav ul li a.active,
+.nav ul li a:hover {
+    background: #fff;
+    color: #b40000;
+}
+
+.menu-toggle {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.menu-toggle span {
+    height: 3px;
+    width: 25px;
+    background: #fff;
+    margin-bottom: 4px;
+    border-radius: 5px;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+    .menu-toggle {
+        display: flex;
+    }
+    .nav ul {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background: #b40000;
+        position: absolute;
+        top: 70px;
+        right: 0;
+    }
+    .nav ul.active {
+        display: flex;
+    }
+}
