--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -13,7 +13,7 @@
   align-items: flex-start;
   flex-wrap: wrap;
   max-width: 1200px;
-  max-height: 200px;
+  height: 50px;
   margin: 0 auto;
   padding: 0 20px;
   gap: 2rem;
